--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 - Introdução\n"
+    "# Introdução\n"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2- Questão 1:"
+    "# Questão 1:"
    ]
   },
   {
@@ -1412,7 +1412,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 - Questão 2:"
+    "### Análise Comparativa dos CDBs\n",
+    "\n",
+    "Devido ao horizonte de investimento relativamente curto — apenas dois anos — as diferenças de rentabilidade entre os títulos avaliados tornam-se menos expressivas. Isso se deve, em parte, ao baixo volume aplicado, pois percentuais de retorno ganham maior relevância à medida que os valores envolvidos se tornam mais elevados, especialmente quando ultrapassam a casa dos milhões.\n",
+    "\n",
+    "Outro ponto importante é que nenhum dos CDBs analisados cobra taxa de administração, o que contribui para um resultado mais transparente e direto na comparação entre eles.\n",
+    "\n",
+    "Ainda assim, é possível destacar que o **Banco Original** oferece uma rentabilidade significativamente superior em relação aos demais. O **CDB do Banco ABC** também apresenta desempenho ligeiramente melhor que o da **Caixa Geral**, embora a diferença entre ambos seja pouco representativa. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Questão 2:"
    ]
   },
   {
@@ -2929,7 +2942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4- Questão 3: "
+    "# Questão 3: "
    ]
   },
   {
