--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1416,9 +1416,9 @@
     "\n",
     "Devido ao horizonte de investimento relativamente curto — apenas dois anos — as diferenças de rentabilidade entre os títulos avaliados tornam-se menos expressivas. Isso se deve, em parte, ao baixo volume aplicado, pois percentuais de retorno ganham maior relevância à medida que os valores envolvidos se tornam mais elevados, especialmente quando ultrapassam a casa dos milhões.\n",
     "\n",
-    "Outro ponto importante é que nenhum dos CDBs analisados cobra taxa de administração, o que contribui para um resultado mais transparente e direto na comparação entre eles.\n",
+    "Outro ponto importante é que nenhum dos CDBs analisados cobra taxa de administração, o que contribui para um resultado mais transparente na comparação entre eles.\n",
     "\n",
-    "Ainda assim, é possível destacar que o **Banco Original** oferece uma rentabilidade significativamente superior em relação aos demais. O **CDB do Banco ABC** também apresenta desempenho ligeiramente melhor que o da **Caixa Geral**, embora a diferença entre ambos seja pouco representativa. \n"
+    "Dessa forma, é possível destacar que o **Banco Original** oferece uma rentabilidade significativamente superior em relação aos demais. O **CDB do Banco ABC** também apresenta desempenho ligeiramente melhor que o da **Caixa Geral**, embora a diferença entre ambos seja pouco representativa. \n"
    ]
   },
   {
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2960,7 +2960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2980,7 +2980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3023,7 +3023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -8040,12 +8040,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Observa-se que o valor de aporte necessário diminui conforme o tempo passa, exemplificando a potencialidade do tempo.\n",
+    "\n",
+    "**Quanto maior o tempo, maior o efeito dos juros, e menor o aporte necessário.**\n",
+    "\n",
+    "Dessa forma, para alcançar a marca de R$30 mil, é necessário:\n",
+    "\n",
+    "Aportes mensais de R$280 reais, caso almeje atingir o montante em sete anos.\n",
+    "\n",
+    "Aportes mensais de R$175.38 reais, caso o tempo alvo seja de dez anos.\n",
+    "\n",
+    "E aportes mensais de R$135.46, caso o horizonte temporal seja de doze anos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -13051,12 +13068,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A premissa para a questão B – e para a C – será a mesma que para a questão A: \n",
+    "\n",
+    "**Quanto maior o tempo, maior o efeito dos juros sobre o montante, e menor a necessidade de aporte**\n",
+    "\n",
+    "Nesse caso, o objetivo é alcançar R$50 mil reais, que aos juros de 7% ao ano necessitará:\n",
+    "\n",
+    "De aportes mensais de R$466.68 em sete anos.\n",
+    "\n",
+    "Aportes mensais de R$292.31 em dez anos.\n",
+    "\n",
+    "E aportes mensais de R$225.77 em do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## C)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
